--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <p>Josh Allen is a turnover machine who tries to do too much. The frustration of the skill players is boiling over to the point that the offensive coordinator - Ken Dorsey - was fired. Head coach Sean McDermott finds himself firmly on the hot seat with his talented squad now 5-5.
 </p>
 
-<h2>
+<h2 style="padding-left: 30px">
     Stefon Diggs, especially, has been frustrated.
 </h2>
 
